# AI-Resume-Tailor

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyrightconfig.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_add_pgvector_and_vault_workshop.py  003_add_audit_logs.py  20260219_0001_001_add_job_listings_system.py  20260219_0002_add_apify_fields.py  20260220_0000_baseline_from_flyway.py  20260220_0001_add_scraper_runs.py  20260220_0002_rename_workshops_to_resume_builds.py  20260223_0001_add_job_description_html.py  20260223_0006_add_user_is_admin.py  20260223_0007_make_is_active_not_null.py  20260223_0008_add_scraper_scheduling.py  20260223_0009_add_missing_job_listing_columns.py  20260224_0001_add_resume_html_and_file_storage.py  20260226_0001_add_resume_style_column.py  20260227_0001_add_schedule_timezone.py  (+26 more)
backend/app/: main.py
backend/flyway/: flyway.conf
backend/mongodb_migrations/: __init__.py  __main__.py  cli.py  runner.py  template.py.tpl
backend/scripts/: cleanup_keyword_overrides_dedup.py  migrate-from-flyway.sh  migrate_to_mongodb.py  pull_my_prod_data.py  seed_local.py  set_local_password.py  sync_local_to_atlas.py  sync_mongo_to_admin.py  test_gemini.py  test_openai.py
backend/tests/: conftest.py  test_ats_analyzer.py  test_audit_service.py  test_health.py  test_main.py  test_rate_limiter.py  test_resumes.py  test_rls_policies.py  test_workshop_repository.py  test_workshops_api.py
(+1106 files in other folders)
