[tool.poetry]
name = "ai-resume-tailor-backend"
version = "0.1.0"
description = "FastAPI backend for AI Resume Tailor"
authors = ["AI Resume Tailor Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# Core
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
# Database
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pgvector = "^0.3.0"  # Vector similarity search with PostgreSQL
# Redis
redis = "^5.0.0"
# Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
# HTTP client (for AI services)
httpx = "^0.26.0"
# AI
google-generativeai = "^0.8.0"
# Document generation
python-docx = "^1.1.0"
reportlab = "^4.2.0"
email-validator = "^2.3.0"
greenlet = "^3.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
aiosqlite = "^0.19.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
